--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -18,7 +18,7 @@
         &::before {
             content: '<h1>';
             font-family: "Coolvetica";
-            color: #ffd700;
+            color: #ED7D31;
             font-size: 18px;
             position: absolute;
             margin-top: -40px;
@@ -29,7 +29,7 @@
         &::after{
             content: '<h1>';
             font-family: "Coolvetica";
-            color: #ffd700;
+            color: #ED7D31;
             font-size: 18px;
             position: absolute;
             margin-top: 18px;
@@ -59,20 +59,20 @@
     }
 
     .flat-button {
-        color: #ffd700;
+        color:#ED7D31;
         font-size: 13px;
         font-weight: 400;
         letter-spacing: 4px;
         font-family: sans-serif;
         text-decoration: none;
         padding: 10px 18px;
-        border: 1px solid #ffd700;
+        border: 1px solid #ED7D31;
         float: left;
         animation: fadeIn 1s 1.8s backwards;
         white-space: nowrap;
 
         &:hover {
-            background: #ffd700;
+            background: #ED7D31;
             color: #333;
         }
     }
