--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -46,7 +46,7 @@
             }
 
             &:hover {
-                color: #ffd700;
+                color: #ED7D31;
 
                 svg {
                     opacity: 0;
@@ -92,7 +92,7 @@
 
         a.active {
             svg {
-                color: #ffd700; 
+                color: #ED7D31; 
             }
         }
     }
