--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -39,8 +39,9 @@
         }
 
         img {
-            width: 32px;
+            width: 40px;
             margin-left: 20px;
+            margin-bottom: -5px;
             opacity: 0;
             height: auto;
             animation: rotateIn 1s linear both;
@@ -63,7 +64,7 @@
         font-size: 13px;
         font-weight: 400;
         letter-spacing: 4px;
-        font-family: sans-serif;
+        font-family: "Coolvetica";
         text-decoration: none;
         padding: 10px 18px;
         border: 1px solid #ED7D31;
