--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -9,6 +9,11 @@
     top: 35px;
 }
 
+.tags.top-html {
+    top: 15px;
+    margin-left: -20px;
+}
+
 .tags{
     color: #ED7D31;
     opacity:  0.6;
@@ -17,6 +22,11 @@
     left: 120px;
     font-size: 18px;
     font-family: 'Quicksand';
+    filter: blur(2.5px);
+
+    &:hover{
+        filter: blur(0px);
+    }
 }
 
 .bottom-tag-html {
@@ -56,7 +66,7 @@
             font-weight: 400;
             margin-top: 0;
             position: relative;
-            margin-bottom: 40px;
+            margin-bottom: 40 px;
             left: 10px;
 
             &::before {
