--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 $primary-color: #ED7D31;
 
 @import 'animate.css';
+// @import '~loaders.css/src/animations/line-scale-pulse-out.scss';
 
 @font-face {
   font-family: 'Quicksand';
@@ -17,4 +18,18 @@ $primary-color: #ED7D31;
 input,
 textarea{
   font-family: 'Quicksand';
+}
+
+.loader-active{
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  animation: fadeOut 1s 1s;
+  animation-fill-mode: forwards;
 }
