--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -22,13 +22,13 @@
         position: absolute;
         width: 200px;
         height: 200px;
-        border: 1px solid #ccc;
-        background: rgba(255,255,255,0.4);
+        border: 1px solid #F19759;
+        background: rgba(#F19759, 0.4);
         font-size: 100px;
         display: flex;
         justify-content: center;
         align-items: center;
-        box-shadow: 0 0 20px 0px lightyellow;
+        box-shadow: 0 0 25px 0px #F19759;
     }
 
     .face1{
