--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -51,12 +51,13 @@
 
     h2 {
         color: #8d8d8d;
-        margin-top: 20px;
+        margin-top: 10px;
         font-weight: 400;
-        font-size: 11px;
-        font-family: sans-serif;
+        font-size: 13px;
+        font-family: "Quicksand";
         letter-spacing: 3px;
         animation: fadeIn 1s 1.8s backwards;
+        margin-bottom: 20px;
     }
 
     .flat-button {
@@ -64,10 +65,11 @@
         font-size: 13px;
         font-weight: 400;
         letter-spacing: 4px;
-        font-family: "Coolvetica";
+        font-family: "Quicksand";
+        font-weight: 1000;
         text-decoration: none;
         padding: 10px 18px;
-        border: 1px solid #ED7D31;
+        border: 2px solid #ED7D31;
         float: left;
         animation: fadeIn 1s 1.8s backwards;
         white-space: nowrap;
