--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -52,12 +52,13 @@
 
     
     .face5{
-        transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
+        transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px) rotate(-90deg);
     }
 
     
     .face6{
-        transform: rotateX(-90deg) translateZ(100px);
+        transform: rotateX(-90deg) translateZ(100px) rotate(270deg);
+
     }
 }
 
