--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 $primary-color: #ED7D31;
 
 @import 'animate.css';
-// @import '~loaders.css/src/animations/line-scale-pulse-out.scss';
+@import '~loaders.css/src/animations/pacman.scss';
 
 @font-face {
   font-family: 'Quicksand';
@@ -20,12 +20,12 @@ textarea{
   font-family: 'Quicksand';
 }
 
-.loader-active{
+.loader-active {
   display: block;
   position: absolute;
   left: 0;
   right: 0;
-  margin: 0;
+  margin: auto;
   top: 0;
   bottom: 0;
   width: 50px;
