--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -44,7 +44,7 @@
     margin: 0 auto;
     z-index: 1;
     transform-style: preserve-3d;
-    animation: faceIn 1s forwards;
+    animation: fadeIn 1s forwards;
     animation-delay: 1s;
 }
 
