Added Contact Page with Form

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -48,7 +48,8 @@
     animation-delay: 1s;
 }
 
-.about-page {
+.about-page,
+.contact-page {
     .text-zone{
         position: absolute;
         left: 10%;
@@ -95,8 +96,9 @@
 
         p {
             font-style: 13px;
+            font-size: 13.5px;
             color: #fff;
-            font-family: sans-serif;
+            font-family: "Quicksand";
             font-weight: 300;
             min-width: fit-content;
             animation: pulse 1s;
