--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -17,18 +17,19 @@
 
         &::before {
             content: '<h1>';
-            font-family: "Coolvetica";
+            font-family: "Quicksand";
             color: #ED7D31;
             font-size: 18px;
             position: absolute;
             margin-top: -40px;
             left: 15px;
+            animation: fadeIn 1s 1.7s backwards;
             opacity: 0.6;
         }
 
         &::after{
             content: '<h1>';
-            font-family: "Coolvetica";
+            font-family: "Quicksand";
             color: #ED7D31;
             font-size: 18px;
             position: absolute;
