changed quicksand font to .woff file to maybe support macOS

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ $primary-color: #ED7D31;
 
 @font-face {
   font-family: 'Quicksand';
-  src: url('./assets/fonts/Quicksand-VariableFont_wght.ttf') format('ttf');
+  src: url('./assets/fonts/Quicksand-VariableFont_wght.woff');
 }
 
 @font-face {
