--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -49,17 +49,8 @@
 }
 
 .about-page,
-.contact-page {
-    .text-zone{
-        position: absolute;
-        left: 10%;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 35%;
-        vertical-align: middle;
-        display: table-cell;
-        max-height: 90%;
-    
+.contact-page,
+.portfolio-page {
         h1 {
             font-size: 53px;
             font-family: 'Coolvetica';
@@ -116,7 +107,16 @@
             }
         
         }
-
+        
+    .text-zone{
+        position: absolute;
+        left: 10%;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 35%;
+        vertical-align: middle;
+        display: table-cell;
+        max-height: 90%;    
     }
 
     .text-animate-hover{
