--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -12,4 +12,124 @@
 
     }
 
+    .images-container{
+        display: flex;
+        gap: 15px;
+        flex-wrap: wrap;
+        padding-bottom: 100px;
+        padding-left: 50px
+    }
+
+    .image-box {
+        position: relative;
+        flex: 1 1 20%;
+        height: 300px;
+        overflow: hidden;
+        border-radius: 10px;
+        max-width: calc(35% - 10px);
+        
+        .portfolio-image{
+            position: absolute;
+            z-index: 2;
+            width: 100%;
+            height: 100%;
+            object-fit: center;
+        }
+        .content {
+            position: absolute;
+            width: 100%;
+            z-index: 3;
+            padding: 10px 20px;
+            bottom: -70px;
+            transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+            //---COTTON CANDY COLOUR---//
+            // background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background: linear-gradient(-45deg, #181818, #ED7D31, #181818, #ED7D31,#fff);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+            height: 22vh;
+        }
+        
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+            
+
+        
+
+        .title {
+            margin-bottom: 0;
+            margin-top: 0;
+            color: #fff;
+            font-size: 24px;
+            font-weight: 500;
+            line-height: 24px;
+        }
+
+        .description {
+            font-size: 14px;
+            margin-top: 5px;
+            margin-bottom: 5px;
+            color:#fff;
+            font-weight: 700;
+        }
+
+        .btn {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            padding: 0 23px;
+            height: 40px;
+            line-height: 34px;
+            border: 2px solid #ED7D31;
+            border-radius: 4px;
+            font-size: 14px;
+            color: #fff;
+            background: transparent;
+            text-transform: uppercase;
+            font-weight: 700px;
+            transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+            cursor: pointer;
+
+        }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            background-color: #ED7D31;
+        }
+
+        &:after {
+            content: "";
+            background: linear-gradient(180deg, #ED7D31, #181818);
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 2;
+            transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+            opacity: 0;
+        }
+        
+        &:hover:after {
+            opacity: 0.85;
+        }
+
+        &:hover .content {
+            bottom: 0;
+            background: transparent;
+        }
+    }
+
+
+
 }
