--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -83,3 +83,15 @@
         transform: rotateY(90deg);
     }
 }
+
+@media screen and (max-width: 1200px) {
+    .stage-cube-cont {
+        position: initial;
+        width: 100%;
+        height: 0%;
+        overflow: visible;
+    }
+
+
+}
+    
