--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -21,7 +21,7 @@
         }
     
         li.half {
-            width: 49;
+            width: 200;
             margin-left: 2%;
             float: left;
             clear: none;
@@ -82,4 +82,15 @@
 .p {
     font-family: "Quicksand";
     font-size: 11px;
+}
+
+@media screen and (max-width: 1200px){
+    
+    .map-wrap {
+        float: none;
+        width: 100%;
+        height: 400px;
+        margin: 0;
+    }
+    
 }
