Implemented EmailJS System to recieve info from Contact Form

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -84,6 +84,22 @@
     font-size: 11px;
 }
 
+.socials{
+    position: flex;
+    bottom: 20px;
+    width: 100%;
+    display: block;
+    padding: 0;    
+    text-align: center;
+    margin: 0;
+    a{
+        width: 200px;
+        height: 200px;
+    }
+}
+
+
+
 @media screen and (max-width: 1200px){
     
     .map-wrap {
