--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -139,9 +139,8 @@
         height: auto;
         min-height: auto;
     
-        ul, nav {
-            display: none;
-
+        nav,ul {
+             display: none
         }
         
         nav {
@@ -154,6 +153,8 @@
             position: fixed;
             z-index: 2;
             margin: 0;
+
+            
 
             a {
                 display: flex;
