Added Vercel Analytics

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -84,19 +84,18 @@
     font-size: 11px;
 }
 
-.socials{
-    position: flex;
-    bottom: 20px;
-    width: 100%;
-    display: block;
-    padding: 0;    
-    text-align: center;
-    margin: 0;
-    a{
-        width: 200px;
-        height: 200px;
-    }
-}
+// .socials{
+//     position: flex;
+//     bottom: 20px;
+//     width: 100%;
+//     display: block;
+//     padding: 0;    
+//     text-align: center;
+//     margin: 0;
+//     .a{}
+//     width: 100px;
+//     height: 100px;
+// }
 
 
 
