--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -74,6 +74,7 @@
         float: left;
         animation: fadeIn 1s 1.8s backwards;
         white-space: nowrap;
+        // width: 150px;
 
         &:hover {
             background: #ED7D31;
@@ -100,9 +101,11 @@
 
         .flat-button {
             float: none;
+            position: relative;
             display: block;
             margin: 20px auto 0 auto;
-            width: 125px;
+            width: 155px;
+
         }
 
         .logo-container {
@@ -122,6 +125,18 @@
             bottom: auto;
             left: 0;
             margin: auto;
+        }
+        .logo{
+            
+            position: relative;
+            padding-top: 20%;
+            // left: 0;
+            width: 0%;
+            transform: translate(-50%);
+            height: 20%;
+            overflow: visible;
+            scale: 75%;
+            
         }
     }
 }
