--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -22,7 +22,7 @@
     left: 120px;
     font-size: 18px;
     font-family: 'Quicksand';
-    filter: blur(2.5px);
+    filter: blur(2px);
 
     &:hover{
         filter: blur(0px);
@@ -31,6 +31,11 @@
 
 .bottom-tag-html {
     margin-left: -20px;
+    filter: blur(2px);
+
+    &:hover{
+        filter: blur(0px);
+    }
 }
 
 .container {
@@ -61,6 +66,12 @@
             margin-bottom: 40px;
             left: 10px;
 
+            // filter: blur(2px);
+
+            // &:hover{
+            //     filter: blur(0px);
+            // }      
+
             &::before {
                 content: '<h1>';
                 font-family: "Quicksand";
@@ -69,7 +80,7 @@
                 margin-top: -10px;
                 left: -10px;
                 opacity: 0.6;
-                line-height: 18px;               
+                line-height: 18px;     
             }
 
             &::after {
@@ -82,6 +93,8 @@
                 bottom: -20px;
                 margin-left: 20px;
                 opacity: 0.6;
+
+               
             }
         }
 
@@ -92,7 +105,8 @@
             font-family: "Quicksand";
             font-weight: 300;
             min-width: fit-content;
-            animation: pulse 1s;
+            // animation: pulse 1s;
+            
 
             &:nth-of-type(1){
                 animation-delay: 1.1s;
@@ -105,6 +119,8 @@
             &:nth-of-type(3){
                 animation-delay: 1.3s;
             }
+
+            
         
         }
         
