--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -80,7 +80,12 @@
                 margin-top: -10px;
                 left: -10px;
                 opacity: 0.6;
-                line-height: 18px;     
+                line-height: 18px;   
+                // filter: blur(2px);
+
+                &:hover{
+                    filter: blur(0px);
+                }  
             }
 
             &::after {
@@ -93,8 +98,12 @@
                 bottom: -20px;
                 margin-left: 20px;
                 opacity: 0.6;
+                // filter: blur(2px);
 
-               
+                &:hover{
+                    filter: blur(0px);
+                } 
+                           
             }
         }
 
