--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -1,4 +1,5 @@
 .portfolio-page {
+
     padding-left: 100px;
     padding-right: 50px;
     width: calc(100% - 150px);
@@ -6,6 +7,10 @@
     height: 100%;
     overflow: auto;
 
+    // .portfolio-page::-webkit-scrollbar {
+    //     display: none;
+    // }
+      
     h1.page-title{
         margin-left: 50px;
         margin-top: 100px;
@@ -17,12 +22,12 @@
         gap: 15px;
         flex-wrap: wrap;
         padding-bottom: 100px;
-        padding-left: 50px
+        padding-left: 50px;
     }
 
     .image-box {
         position: relative;
-        flex: 1 1 20%;
+        flex: 1 1 30%;
         height: 300px;
         overflow: hidden;
         border-radius: 10px;
@@ -177,4 +182,8 @@
         }   
     
     }
+}
+
+.portfolio-page::-webkit-scrollbar {
+    display: none;
 }
