--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -66,7 +66,7 @@
             margin-bottom: 40px;
             left: 10px;
 
-            // filter: blur(2px);
+            filter: blur(0px);
 
             // &:hover{
             //     filter: blur(0px);
@@ -81,12 +81,15 @@
                 left: -10px;
                 opacity: 0.6;
                 line-height: 18px;   
-                // filter: blur(2px);
-
-                &:hover{
-                    filter: blur(0px);
-                }  
+                filter: blur(1.75px);
+                
             }
+
+            // &::before:hover{
+            //     filter: blur(0px);
+            //     color: blue;
+
+            // } 
 
             &::after {
                 content: '</h1>';
@@ -98,14 +101,17 @@
                 bottom: -20px;
                 margin-left: 20px;
                 opacity: 0.6;
-                // filter: blur(2px);
+                filter: blur(1.75px);
+                // color: white;
 
-                &:hover{
-                    filter: blur(0px);
-                } 
+               
                            
             }
-        }
+            
+        }  
+           
+        
+        
 
         p {
             font-style: 13px;
@@ -128,8 +134,6 @@
             &:nth-of-type(3){
                 animation-delay: 1.3s;
             }
-
-            
         
         }
         
@@ -147,6 +151,7 @@
     .text-animate-hover{
         &:hover {
             color: #fff;
+            filter: blur(0px);
         }
     }
 }
